# openapi.yaml
@@ -165,12 +165,16 @@ paths:
             schema:
               $ref: '#/components/schemas/GachaPutRequest'
         description: ''
+      tags:
+        - gacha
     delete:
       summary: ''
       operationId: delete-gacha-id
       responses:
         '200':
           description: OK
+      tags:
+        - gacha
   /gacha/:
     get:
       summary: Your GET endpoint
@@ -188,9 +192,9 @@ paths:
                   value:
                     gachas:
                       - gacha_info:
-                          gacha_name: name
-                          banner_image: 'https://hoge.png'
-                          exec_count: 1
+                          gacha_name: string
+                          banner_image: string
+                          exec_count: 0
                         gacha_costs:
                           costs:
                             - cost_type: 0
@@ -213,6 +217,26 @@ paths:
           application/json:
             schema:
               $ref: '#/components/schemas/GachaPostRequest'
+            examples:
+              Example 1:
+                value:
+                  gacha_id: 0
+                  gacha_info:
+                    gacha_name: string
+                    banner_image: string
+                    exec_count: 0
+                  gacha_costs:
+                    costs:
+                      - cost_type: 0
+                        cost: 0
+                  gacha_probabilities:
+                    probabilities:
+                      - probability: 0
+                        object_type: 0
+                        object_id: 0
+                        object_count: 0
+      tags:
+        - gacha
 components:
   schemas:
     UserRequest:
@@ -398,6 +422,7 @@ components:
         gacha_probabilities:
           $ref: '#/components/schemas/MultipleGachaProbabilityRequest'
       required:
+        - gacha_id
         - gacha_info
         - gacha_costs
         - gacha_probabilities
