# src/main/kotlin/com/sireikan/gack/http/controller/GachaController.kt
@@ -1,22 +1,23 @@
 package com.sireikan.gack.http.controller
 
+import com.sireikan.gack.application.service.usecase.gacha.CreateGachaUseCase
 import com.sireikan.gack.application.service.usecase.gacha.GetGachaUseCase
+import com.sireikan.gack.application.service.usecase.gacha.data.GachaCreateData
+import com.sireikan.gack.application.service.usecase.gacha.data.GachaInfoData
 import com.sireikan.gack.application.service.usecase.gacha.data.GachaInputData
 import com.sireikan.gack.application.service.usecase.gacha.data.GachaOutputData
 import com.sireikan.gack.openapi.generated.controller.GachaApi
-import com.sireikan.gack.openapi.generated.model.GachaCostResponse
-import com.sireikan.gack.openapi.generated.model.GachaInfoResponse
-import com.sireikan.gack.openapi.generated.model.GachaProbabilityResponse
-import com.sireikan.gack.openapi.generated.model.GachaResponse
-import com.sireikan.gack.openapi.generated.model.MultipleGachaCostResponse
-import com.sireikan.gack.openapi.generated.model.MultipleGachaProbabilityResponse
+import com.sireikan.gack.openapi.generated.model.*
 import org.springframework.beans.factory.annotation.Autowired
 import org.springframework.http.HttpStatus
 import org.springframework.http.ResponseEntity
 import org.springframework.web.bind.annotation.RestController
 
 @RestController
-class GachaController(@Autowired val getGachaUseCase: GetGachaUseCase) : GachaApi {
+class GachaController(
+    @Autowired val getGachaUseCase: GetGachaUseCase,
+    @Autowired val createGachaUseCase: CreateGachaUseCase,
+) : GachaApi {
     override fun getGachaId(id: String): ResponseEntity<GachaResponse> {
         val gachaOutputData: GachaOutputData = getGachaUseCase.execute(GachaInputData.create(id.toLong())) ?: return ResponseEntity(HttpStatus.NOT_FOUND)
         return ResponseEntity(
@@ -45,6 +46,27 @@ class GachaController(@Autowired val getGachaUseCase: GetGachaUseCase) : GachaAp
                     }.toList(),
                 ),
             ),
+            HttpStatus.OK,
+        )
+    }
+
+    override fun postGacha(gachaPostRequest: GachaPostRequest?): ResponseEntity<Unit> {
+        if (gachaPostRequest == null) {
+            return ResponseEntity(
+                HttpStatus.BAD_REQUEST,
+            )
+        }
+        createGachaUseCase.execute(GachaCreateData.create(
+            gachaPostRequest.gachaId,
+            GachaInfoData.create(
+                gachaPostRequest.gachaInfo.gachaName,
+                gachaPostRequest.gachaInfo.bannerImage,
+                gachaPostRequest.gachaInfo.execCount
+            ),
+            listOf(),
+            listOf()
+        ))
+        return ResponseEntity(
             HttpStatus.OK,
         )
     }
